Fixed: Removed extra padding in windows-popup

--- a/src/styles/themes/proton/sidebar/popup.windows.styl
+++ b/src/styles/themes/proton/sidebar/popup.windows.styl
@@ -13,7 +13,7 @@
   overflow: hidden
 
 .WindowsPopup .scrollable
-  padding-bottom: 64px
+  padding-bottom: 8px
 
 // ---
 // -- Window container
